added sequence diagrams to main.tex

--- a/main.tex
+++ b/main.tex
@@ -302,7 +302,20 @@ Figure~\ref{fig:simp_component_diagram} illustrates the individual component int
 \section{Process View}
 
 \subsection{Sequence Diagram}
-TODO: Mykolas
+\begin{figure}[H]
+    \centering
+    \textwidthdiagram{aim_trainer_page_sequence.tex}
+    \caption{Aim Trainer Page Loading Sequence}
+    \label{fig:aim_trainer_page_sequence}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \textwidthdiagram{aim_trainer_set_score_sequence.tex}
+    \caption{Aim Trainer Score Setting Sequence}
+    \label{fig:aim_trainer_set_score_sequence}
+\end{figure}
+
 \subsection{Activity Diagram}
 TODO: Mykolas
 
