Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -257,7 +257,7 @@ game while clearly defining the conditions for continuation and termination.
 
 \begin{figure}[H]
     \centering
-    \textwidthdiagram{ {PNG/ER_diagram.png} }
+    \textwidthdiagram{PNG/ER_diagram.png}
     \caption{ER Diagram} 
     \label{fig:ER diagram}
 \end{figure}
