added leaderboard activity

--- a/main.tex
+++ b/main.tex
@@ -365,7 +365,14 @@ code. Finally, the result is propagated back through the client service to
 the Aim Trainer page, updating the UI accordingly.
 
 \subsection{Activity Diagram}
-TODO: Mykolas
+\begin{figure}[H]
+    \centering
+     \begin{adjustbox}{width=0.92\paperwidth,center}
++        \inputdiagram{leaderboard_activity.tex}
+     \end{adjustbox}
+    \caption{Leaderboard Loading Diagram}
+    \label{fig:leaderboard_activity}
+\end{figure}
 
 \section{Physical View}
 \subsection{Deployment}
